# experiments-and-tutorials

./: .gitignore  README.md
AI/: agents.coding.sample.md
Bash/: autokey-run-get-url-from-browser.sh  bash_source_hello.sh  cd-ing-into-globbed-paths.sh  default-argument.sh  echo-home.sh  expand-paths-hello.sh  ffmpeg-combine-audio-video-hello.sh  gitlab-api-download-repos.sh  gitlab-api-hello.sh  hello-gitlab-api.sh  if-does-not-eat-status.sh  importing_files_hello.inc.sh  importing_files_hello.sh  inotify-directories-hello.sh  inotify-hello.sh  leds-hello.sh  match-patterns-against-command-line-input.sh  option-forwarding.sh  parameter-expansion-hello.sh  pipefail-hello.sh  set-e-and-if-hello.sh  set-e-and-trap.sh  subshell-function-hello.sh  whiptail-hello.sh
CMake/: CMakeLists.txt  clean-build.sh  cmake-parse-arguments.cmake  custom-cmake-command.cmake  find-library.cmake  function-return-values.cmake  if-defined.cmake  lists.cmake  macros-vs-functions.cmake  messages.cmake  predefined-cmake-vars.cmake  set-vs-option.cmake  use-java.cmake
Cpp/: 3-way-comparison.cpp  aggregate-initialize-hello.cpp  argc-hello.cpp  audieffects.hpp  audioeffects.cpp  clang-tidy-hello.cpp  int32_t-hello.cpp  mutex-hello.cpp  playground-14-main.cpp  promise-future-hello.cpp  segfault-hello.cpp  shared-ptr-by-value-vs-by-ref.cpp  sizeof_vector.cpp  thread-hello.cpp  valgrind-hello.cpp
Cpp/QT-Hello/03-qt-with-cmake-hello/: CMakeLists.txt  main.cpp
Cpp/QTCreator-hello/: CMakeLists.txt  My.cpp  My.h  main.cpp
Cpp/QTCreator-hello/build-debug/: CMakeCache.txt  cmake_install.cmake  playground_qtc  playground_qtc.cbp
Cpp/QTCreator-hello/old/: timezoneplayground.cpp
Cpp/X11-hello/05-x11-text-cursor-hello/: CMakeLists.txt  main.cpp
Cpp/X11-hello/05-x11-text-cursor-hello/include/: App.hpp
Cpp/X11-hello/05-x11-text-cursor-hello/src/: App.cpp  main.cpp
Cpp/X11-hello/simple-x11-window-and-input-hello/: CMakeLists.txt  main.cpp
Cpp/X11-hello/x11-with-xft-text-hello/: CMakeLists.txt  main.cpp
Cpp/cpp-2026-refresher/: CMakeLists.txt  README.md  main.cpp  run.sh
Cpp/libxdo-hello/: CMakeLists.txt
Cpp/libxdo-hello/cmake/: libxdo.cmake
Cpp/libxdo-hello/src/: main.cpp
Cpp/libxml2-html-to-text-hello/: CMakeLists.txt  main.cpp
Cpp/libxml2-html-to-text-hello/include/: scrape.hpp
Cpp/libxml2-html-to-text-hello/src/: main.cpp  scrape.cpp
Cpp/readline-hello/: CMakeLists.txt  main.cpp
Cpp/xdo-hello/libxdo-hello-from-system/: CMakeLists.txt
Cpp/xdo-hello/libxdo-hello-from-system/include/: XCopyPaste.hpp
Cpp/xdo-hello/libxdo-hello-from-system/src/: main.cpp
Cpp/yaml-cpp-hello/: CMakeLists.txt  broken.yaml  info.yaml  my settings.yaml  out_file.yaml  out_file_1.yaml  out_file_2.yaml
Cpp/yaml-cpp-hello-resilient-settings/: CMakeLists.txt
Cpp/yaml-cpp-hello-resilient-settings/cmake/: yaml-cpp-CMakeLists.txt.in  yaml-cpp.cmake
Cpp/yaml-cpp-hello-resilient-settings/src/: main.cpp
Cpp/yaml-cpp-hello/cmake/: yaml-cpp-CMakeLists.txt.in  yaml-cpp.cmake
Cpp/yaml-cpp-hello/src/: main.cpp
Go/: arrays-slices-hello.go  arrays.go  defer-hello.go  defer.go  go-2026-refresher.go  goroutines-hello.go  if-hello.go  if.go  interface-hello.go  json-hello.go  maps-hello.go  pointer-return-hello.go  string.go  strings-hello.go  structs-hello.go  time-hello.go  time-parsing-hello.go  variables-with-initializers-hello.go  variables-with-initializers.go  variadic-functions-hello.go
Gradle/: README.md  build.gradle  settings.gradle
Jupyter/: Experiments.ipynb  bash-kernel-experiments.ipynb  matplotlib-experiments.ipynb  my-hello-jup.ipynb  running_notes  store-magic.ipynb  widgets-hello.ipynb
Lua/: local-functions-hello.lua
Mermaid/: Kubernetes.md  graph-types.md  mermaid-github-markdown-hello.md
MongoDB/: upload-templates-args.json  upload-templates.js
Processing/: processing3_template.pde  processing_template.txt
Python/: LooseVersion-hello.py  RAM-usage-hello.py  RAM-usage-with-psutil-hello.py  SpeechRecognition-hello.py  StringIO-hello-python2.py  StringIO-hello.py  abc-hello.py  abstract-properties.py  access-via-local-var-is-faster-than-via-member-var.py  aiohttp-hello.py  and-or-resolution-order-hello.py  applicat0r.py  argparse-hello.py  argparse-with-filetypes-hello.py  args-kwargs-hello.py  argument-forwarding-hello.py  ast-hello.py  async-subprocess-hello.py  asyncio-events-hello.py  asyncio-hello.py  base64-hello.py  beautifulsoup-hello-website-text-scrape.py  breadth-first-search-bfs-hello.py  breadth-first-search-hello.py  cProfile-hello.py  classmethods-and-subclassing.py  click-hello.py  codekata_binary_search.py  codekata_fizzbuzz.py  codekata_karate_chop.py  codekata_karate_chop_test.py  configparser-hello.py  constants-hello.py  context-managers-hello.py  contextmanagers-hello.py  counter-multiset-hello.py  csv-hello.py  (+124 more)
Python/PyAutoGUI-hello/: .gitignore  README.md  main.py  pyproject.toml
Python/chatterbox-tts-hello/: .gitignore  chatterbox-hello.py  chatterbox-voice-cloning-hello.py  chatterbox-voice-synthetization-hello.py  gradio-chatterbox-hello.py  gradio-chatterbox-voicecloning-hello.py  pyproject.toml
Python/django-hello/poetry-django-hello/: manage.py  pyproject.toml
Python/django-hello/poetry-django-hello/bookmarks/: views.py
Python/django-hello/poetry-django-hello/bookmarks/models/: bookmark.py
Python/django-hello/poetry-django-hello/bookmarks/static/: style.css
Python/django-hello/poetry-django-hello/bookmarks/templates/bookmarks/: mytemplate.html
Python/django-hello/poetry-django-hello/django_poetry_hello/: asgi.py  db.sqlite3  manage.py  settings.py  urls.py  wsgi.py
Python/django-hello/poetry-django-hello/django_poetry_hello/bookmarks/: urls.py  views.py
Python/django-hello/poetry-django-hello/django_poetry_hello/bookmarks/models/: bookmark.py
Python/django-hello/poetry-django-hello/django_poetry_hello/bookmarks/templates/bookmarks/: mytemplate.html
Python/django-hello/poetry-django-hello/django_poetry_hello/django_poetry_hello/: asgi.py  settings.py  urls.py
Python/uv-hello/: .gitignore  README.md  main.py  pyproject.toml
(+3942 files in other folders)
