[project]
name = "pyautogui-hello"
version = "0.1.0"
description = "Hello from pyautogui-hello!"
readme = "README.md"
authors = [
    { name = "Andreas Langenhagen" }
]
# there were issues w/ Python 3.13:
# PyAutoGUI was unable to import pyscreeze. (This is likely because you're running a version of
# Python that Pillow (which pyscreeze depends on) doesn't support currently.)
requires-python = ">=3.11.3"
dependencies = [
    "opencv-python>=4.12.0.88",
    "pyautogui",
    "pyscreeze>=1.0.1",
]

[dependency-groups]
dev = [
    "bpython>=0.25",
]
