[tool.poetry]
name = "poetry-django-hello"
version = "0.1.0"
description = "A hello poetry & django project."
authors = ["Andreas Langenhagen <andreas.langenhagen@celeraone.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.8"
pyyaml = "^5.4"

[tool.poetry.dev-dependencies]
bpython = "^0.19"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
